--- a/Staticpage/public/css/video.css
+++ b/Staticpage/public/css/video.css
@@ -11,6 +11,7 @@
 	color: #3B7454;
 	margin-bottom: 0;
 	margin-top: 0;
+	position: relative;
 }
 .hotvideos h4 img{
 	height: 100%;
@@ -61,8 +62,9 @@
 	margin-bottom: 10%;
 }
 .hotvideos h4 span{
-	display: inline-block;
-	margin-left: 60%;
+	position: absolute;;
+	right: 5%;
+	top: 0%;
 }
 .hotvideos h4 span a{
 	text-decoration: none;
